15-Commit Mejora en las consultas SQL para el listado de unidades legales y establecimientos.

--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-resumen.xhtml
@@ -140,59 +140,34 @@
 
             <h4 class="titulo-center-h3">Información de Tamaño</h4>
             <h:panelGrid columns="2" columnClasses="label, value">
-                <p:outputLabel value="Información con corte a: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.infoCorte}"/>
 
                 <p:outputLabel value="Personal ocupado: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.personalOcupado}"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.tamanoSeleccionado.personalOcupado}"/>
 
                 <p:outputLabel value="Personal empleado: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.personalEmpleado}"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.tamanoSeleccionado.personalEmpleado}"/>
 
-                <p:outputLabel value="Personal cotizante: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.personalCotizante}"/>
+                <p:outputLabel value="Personal temporal: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.tamanoSeleccionado.personalTemporal}"/>
 
                 <p:outputLabel value="Número de hombres: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.hombresOcupados}"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.tamanoSeleccionado.hombresOcupados}"/>
 
                 <p:outputLabel value="Número de mujeres: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.mujeresOcupadas}"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.tamanoSeleccionado.mujeresOcupadas}"/>
 
                 <p:outputLabel value="Activo: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.activo}"/>
-
-                <p:outputLabel value="Pasivo: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.pasivo}"/>
-
-                <p:outputLabel value="Patrimonio: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.patrimonio}"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.tamanoSeleccionado.activo}"/>
 
                 <p:outputLabel value="Ingresos operacionales: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.ingresosOperacionales}"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.tamanoSeleccionado.ingresosOperacionales}"/>
 
-                <p:outputLabel value="Utilidad bruta: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.utilidadBruta}"/>
-
-                <p:outputLabel value="Gastos operacionales de administración: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.gastosOperacionalesAdmon}"/>
-
-                <p:outputLabel value="Gastos operacionales de venta: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.gastosOperacionalesVenta}"/>
+                <p:outputLabel value="Costo de ventas: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.tamanoSeleccionado.costoVentasEst}"/>
 
                 <p:outputLabel value="Gastos operacionales: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.gastosOperacionales}"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.tamanoSeleccionado.gastosOperacionales}"/>
 
-                <p:outputLabel value="Utilidad operativa: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.utilidadOperativa}"/>
-
-                <p:outputLabel value="EBITDA: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.ebitda}"/>
-
-                <p:outputLabel value="Utilidad neta: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.utilidadNeta}"/>
-
-                <p:outputLabel value="Observaciones: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.observaciones}"/>
             </h:panelGrid>
 
         </h:panelGrid>
