--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
@@ -38,7 +38,7 @@
             <p:inputText id="txtActivo" value="#{MbFormEstablecimiento.tamanoSeleccionado.activo}"  styleClass="valorEtiquetaFormulario"/>
             <p:message for="txtActivo" />
 
-            <p:outputLabel value="ingresos operacionales: *" styleClass="etiquetaFormulario"/>
+            <p:outputLabel value="Ingresos operacionales: *" styleClass="etiquetaFormulario"/>
             <p:inputText id="txtIngresosOperacionales" value="#{MbFormEstablecimiento.tamanoSeleccionado.ingresosOperacionales}"  styleClass="valorEtiquetaFormulario"/>
             <p:message for="txtIngresosOperacionales" />
 
